se quita los textos de ejemplo

--- a/logIn.html
+++ b/logIn.html
@@ -42,7 +42,7 @@
   <main class="main">
     <div class="container">
       <section class="formulario">
-        <h5>LOGIN SOCIO</h5>
+        <h5>INICIO DE SESION</h5>
         <input class="controls" type="text" name="username"  id="username" placeholder="Usuario (Documento)" onkeypress="return valideKey(event);">
 
         <input class="controls" type="password" name="contrasena" id="password" placeholder="Contraseña" onkeypress="return soloLetras(event)">
