--- a/quienesSomosCliente.html
+++ b/quienesSomosCliente.html
@@ -47,7 +47,7 @@
                     <h2>Sobre nosotros</h2>
                     <h3>Yelmos logisticas y soluciones S.A.S</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolor optio dignissimos eum veniam autem veritatis! Sapiente, architecto quos quam tempore quibusdam exercitationem rerum eligendi vero, facilis praesentium maiores mollitia.
+                        La empresa Yelmos logista y soluciones S.A.S somos empresa, con amplia experiencia en soluciones logisticas a nuestros clientes. Estamos comprometidos con la seguridad, cumplimiento y calidad de nuestro servicio. Brindamos manejo de paquetería y despachos a individuos y empresas pequeñas, medianas y grandes a nivel Bogota.
                     </p>
                 </aside>
             </section>
@@ -58,13 +58,13 @@
                     <article>
                         <h2>Mision</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolor optio dignissimos eum veniam autem veritatis! Sapiente, architecto quos quam tempore quibusdam exercitationem rerum eligendi vero, facilis praesentium maiores mollitia.
+                            Ofrecer servicios y soluciones de logística a nuestros clientes, con alto grado de seguridad, calidad y cumplimiento, integrándonos con la logística, reduciendo tiempo, riesgos y costos.
                         </p>
                     </article>
                     <article>
                         <h2>Vision</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolor optio dignissimos eum veniam autem veritatis! Sapiente, architecto quos quam tempore quibusdam exercitationem rerum eligendi vero, facilis praesentium maiores mollitia.
+                            Para el 2025 ser una empresa líder en servicios logísticos reconocida en Bogota, posicionada como una empresa que brinda confianza, calidad e innovación a sus clientes.
                         </p>
                     </article>              
                 </aside>
