--- a/servicios.html
+++ b/servicios.html
@@ -37,8 +37,8 @@
                         <img src="img/rosebox-BFdSCxmqvYc-unsplash (1).jpg" alt="">
                     </figure>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad exercitationem quos voluptatem nisi harum, perferendis praesentium, ex maiores similique explicabo corporis ea hic libero numquam facilis nostrum quia necessitatibus aperiam?
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore incidunt facere maiores placeat. Repellat deserunt voluptatum numquam nemo, aliquid molestias, fugiat ex possimus architecto dolorum cumque quae rem! Consequuntur, nobis.
+                        Nos encargamos del embalaje de sus productos preparandolos luego de ser recolectados por el proceso de picking. Una vez hayan sido recogidos los entregamos al destinatario que nos ha indicado anteriormente.
+                        Es un Packing de tipo primario donde preparamos las cajas con los respectivos productos y los entregamos con los datos del pedido. 
                     </p>
                 </section>
                 <h2>Eventos</h2>
@@ -47,8 +47,19 @@
                         <img src="img/pexels-angela-roma-7319105.jpg" alt="">
                     </figure>                 
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, voluptatibus est repellendus dicta eos voluptatum tempore vero amet similique necessitatibus ullam nisi eligendi labore, laudantium sequi quo iste doloribus. Dignissimos!
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione quaerat quasi laudantium neque explicabo! Veritatis, eaque accusantium animi quae consequatur nobis voluptas quasi, ab quod delectus, eum porro odio totam.
+                        Realizamos el prestamo de implementos para los eventos que realice en el centro comercial o en su local.
+                        <br>
+                        Los entregamos segun las indicaciones que nos hayas dado y una vez terminado el evento los recogemos en tu local para que no te tengas que desplazar.
+                        <br>
+                        <br>
+                        Ofrecemos implementos tales como:
+                        <br>
+                        <br>
+                        -Mesas
+                        <br>
+                        -Sillas
+                        <br>
+                        -Stands
                     </p>
                 </section>
                 
@@ -60,8 +71,9 @@
                     </figure>    
                     
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem officia repudiandae eaque hic quibusdam deserunt qui eum, rerum reiciendis dicta sunt suscipit quasi porro velit aspernatur placeat blanditiis aperiam!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quod sit cum culpa quidem ea, dicta in, corrupti asperiores numquam sint ipsa architecto harum! Hic fuga mollitia veritatis eos similique?
+                        Consiste en personalizar todo tipo de objetos con el logo de su empresa o con el eslogan. 
+                        Envianos tu logo y el diseño del objeto. Una vez tengamos esta información, nos contactaremos con nuestros proveedores de confianza para garantizar la calidad de las imagenes en los objetos que nos hayas indicado.
+                        Una vez terminado te lo entregaremos junto a un recibo para que puedas ver que todo ha quedado correcto.
                     </p>
                 </section>
             </section>          
