--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
     <!-- ======================================== -->
     <main class="main">
         <div class="container">
-          <form action="" onsubmit="areaVerification()" class="formulario animate__bounceIn">
+          <form action="" class="formulario animate__bounceIn">
             <section class="form-login">
               <h5>Crear Cuenta</h5>
               <input class="controls" type="text" name="name" value="" placeholder="Nombres" required>
