se corrige la descripción

--- a/quienesSomosCliente.html
+++ b/quienesSomosCliente.html
@@ -45,9 +45,9 @@
                 </figure>          
                 <aside class="text-sobre-nosotros">
                     <h2>Sobre nosotros</h2>
-                    <h3>Yelmos logisticas y soluciones S.A.S</h3>
+                    <h3>Yelmos logísticas y soluciones S.A.S</h3>
                     <p>
-                        La empresa Yelmos logista y soluciones S.A.S somos empresa, con amplia experiencia en soluciones logisticas a nuestros clientes. Estamos comprometidos con la seguridad, cumplimiento y calidad de nuestro servicio. Brindamos manejo de paquetería y despachos a individuos y empresas pequeñas, medianas y grandes a nivel Bogota.
+                        Somos una empresa con amplia experiencia en soluciones logisticas a nuestros clientes. Estamos comprometidos con la seguridad, cumplimiento y calidad de nuestro servicio. Brindamos manejo de paquetería y despachos a individuos y empresas pequeñas, medianas y grandes a nivel Bogota.
                     </p>
                 </aside>
             </section>
