--- a/reservas.html
+++ b/reservas.html
@@ -113,7 +113,7 @@
                             </div>
 
                             <!-- <button class="btn btn-outline-secondary" type="submit">Validar</button> -->
-                            <input type="submit" value="Enviar">
+                            <input type="submit" value="Enviar" class="btn btn-outline-secondary" onclick="hizoClick() ">
                         
                         </form>
                     <!-- </section>  -->           
@@ -242,7 +242,7 @@
                         </div>
                     </div>
 
-                        <button id="boton2" class="btn btn-outline-secondary">Enviar</button>
+                        <button id="boton2" class="btn btn-outline-secondary" onclick="hizoClick2()">Enviar</button>
                     </form> 
                 </div>
 
@@ -312,7 +312,7 @@
                                 <input id="Detalle2" type="text" onkeypress="return soloLetras(event)">
                                 <p></p>                
                             </div>
-                            <button id="boton3" class="btn btn-outline-secondary">Enviar</button>
+                            <button id="boton3" class="btn btn-outline-secondary" onclick="hizoClick3()">Enviar</button>
                     </form>  
                 </div>
             </div>
