--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/signup.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/footer.css">
-    <script src="script/validacionReserva.js"></script>
+    <script src="script/validacionsigup.js"></script>
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -35,19 +35,19 @@
     <!-- ======================================== -->
     <main class="main">
         <div class="container">
-          <form action="" class="formulario animate__bounceIn">
+          <form method="get" class="formulario animate__bounceIn">
             <section class="form-login">
               <h5>Crear Cuenta</h5>
-              <input class="controls" type="text" name="name" value="" placeholder="Nombres" required>
-              <input class="controls" type="text" name="lastName" value="" placeholder="Apellidos" required>
-              <input class="controls" type="text" name="documento" value="" id="documento" placeholder="Numero documento" onkeypress="return valideKey(event);">
-              <input class="controls" type="email" name="mail" value="" placeholder="Email" required>
-              <input class="controls w-95 input-total" type="tel" name="celular" value="" placeholder="Numero de Celular" min="10" required onkeypress="return valideKey(event);">
-              <input class="controls input-total mb-3" type="password" name="contrasena" value="" placeholder="Contraseña" required>
+              <input class="controls" type="text" id="name" value="" placeholder="Nombres" required>
+              <input class="controls" type="text" id="lastName" value="" placeholder="Apellidos" required>
+              <input class="controls" type="text" id="documento" value=""  placeholder="Numero documento" onkeypress="return valideKey(event);">
+              <input class="controls" type="email" id="mail" value="" placeholder="Email" required>
+              <input class="controls w-95 input-total" type="tel" id="celular" value="" placeholder="Numero de Celular" min="10" required onkeypress="return valideKey(event);">
+              <input class="controls input-total mb-3" type="password" id="contrasena" value="" placeholder="Contraseña" required>
               <!-- <a href="/iniciocliente.html"> -->
-              <input class="buttons" type="submit" name="" value="Ingresar">
+              <input class="buttons" type="submit" name="" value="Ingresar" onclick="hizoClick()">
               <!-- </a> -->
-              <input class="buttons" type="button" name="" value="Regresar">
+              <input class="buttons" type="reset" name="" value="Regresar">
               <p><a href="#">¿Alguan duda?</a></p>
             </section>
         </form>
