--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -72,7 +72,7 @@
             <section class="sobre-nosotros-3">
                 <section class="container-fluid">
                     <div class="row w-75 mx-auto">
-                        <h2>Equipo de trabajos</h2>
+                        <h2>Contáctanos</h2>
                         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
                             <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                             <div class="descripcion">
@@ -99,7 +99,7 @@
         <div class="footer-top">
             <div class="box">
                 <h2>Contáctanos</h2>
-                <p>Tel. 3172224453</p>
+                <p>Tel. 3172225453</p>
                 <p>yelmosltda@yahoo.es</p>
             </div>
             <div class="box">
