--- a/quienesSomosCliente.html
+++ b/quienesSomosCliente.html
@@ -77,7 +77,7 @@
             <section class="sobre-nosotros-3">
                 <section class="container-fluid">
                     <div class="row w-75 mx-auto">
-                        <h2>Equipo de trabajos</h2>
+                        <h2>Contáctanos</h2>
                         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
                             <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                             <div class="descripcion">
